[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unitree-g1-sim"
version = "0.1.0"
description = "Lightweight pure-Python diagnostic simulator for the Unitree G1 humanoid robot"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "ChenYue", email = "yuebit@github.com"},
]
keywords = ["unitree", "g1", "humanoid", "robot", "simulation", "diagnostics", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "numpy>=1.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio",
]

[project.urls]
Homepage = "https://github.com/YueBit/g1-sim"
Repository = "https://github.com/YueBit/g1-sim"
Issues = "https://github.com/YueBit/g1-sim/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/unitree_g1_sim"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
